Add party 11ty possum

--- a/guests.yaml
+++ b/guests.yaml
@@ -113,3 +113,5 @@
 - hd: hd/partypear.gif
   name: Party pear, for all your pair programming needs
   tip: Bring the party to your pear programming
+- gif: party-11ty.gif
+  name: Party 11ty
