--- a/parrots.yaml
+++ b/parrots.yaml
@@ -226,7 +226,7 @@
   tip: The cake is a lie.
 - hd: hd/hardhatparrot.gif
   name: Hard Hat Parrot
-  tip: ! '[Under Construction]'
+  tip: ! "[Under Construction]"
 - hd: hd/flyingmoneyparrot.gif
   name: Flying Money Parrot
   tip: The money is flying away!
@@ -526,7 +526,7 @@
   name: React Parrot
 - gif: standupparrot.gif
   name: Standup Parrot
-  tip:  Stand up not sit down
+  tip: Stand up not sit down
 - hd: hd/mergetrainparrot.gif
   name: Merge Train Parrot
   tip: All aboard the merge train
@@ -587,3 +587,6 @@
   tip: Derp.
 - hd: hd/mailparrot.gif
   name: Mail Parrot
+- gif: nextparrot.gif
+  name: Next Parrot
+  tip: '"use client" doesn''t mean CSR only'
