--- a/parrots.yaml
+++ b/parrots.yaml
@@ -593,3 +593,6 @@
 - gif: nextparrot.gif
   name: Next Parrot
   tip: '"use client" doesn''t mean CSR only'
+- gif: quantumparrot.gif
+  name: Quantum Parrot
+  tip: Observed behavior may differ, Don’t stare too hard
