Add Svelte parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -527,6 +527,8 @@
   tip: safety is number one priority
 - hd: hd/reactparrot.gif
   name: React Parrot
+- hd: hd/svelteparrot.gif
+  name: Svelte Parrot
 - gif: standupparrot.gif
   name: Standup Parrot
   tip: Stand up not sit down
