--- a/parrots.yaml
+++ b/parrots.yaml
@@ -598,3 +598,5 @@
 - hd: hd/quantumparrot.gif
   name: Quantum Parrot
   tip: Observed behavior may differ, don’t stare too hard
+- hd: hd/yeetparrot.gif
+  name: Yeet Parrot
