--- a/parrots.yaml
+++ b/parrots.yaml
@@ -598,5 +598,7 @@
 - hd: hd/quantumparrot.gif
   name: Quantum Parrot
   tip: Observed behavior may differ, don’t stare too hard
+- hd: hd/6-7parrot.gif
+  name: 6-7 Parrot
 - hd: hd/yeetparrot.gif
   name: Yeet Parrot
