Add new guest 'Party gift!' with a GIF
Adding a party parrot gift gif

--- a/guests.yaml
+++ b/guests.yaml
@@ -115,3 +115,5 @@
   tip: Bring the party to your pear programming
 - gif: party-11ty.gif
   name: Party 11ty
+- gif: giftparrot.gif
+  name: Party gift!
